--- a/src/br/senac/LojaMoveis/telas/TelaProduto.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaProduto.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="318.0" prefWidth="652.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="br.senac.LojaMoveis.telas.TelaProdutoController">
+<AnchorPane id="AnchorPane" prefHeight="318.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaProdutoController">
    <children>
       <TextField fx:id="tfProduto" layoutX="27.0" layoutY="37.0" prefHeight="25.0" prefWidth="173.0" promptText="Produto" />
       <TextField fx:id="tfCor" layoutX="27.0" layoutY="72.0" prefHeight="25.0" prefWidth="173.0" promptText="Cor" />
@@ -15,19 +14,19 @@
       <TextField fx:id="tfQuantidade" layoutX="27.0" layoutY="147.0" prefHeight="25.0" prefWidth="173.0" promptText="Quantidades" />
       <TextField fx:id="tfValor" layoutX="27.0" layoutY="184.0" prefHeight="25.0" prefWidth="173.0" promptText="Valor" />
       <Button layoutX="61.0" layoutY="227.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="63.0" text="Limpar" />
-      <Button layoutX="137.0" layoutY="227.0" mnemonicParsing="false" onAction="#inserir" prefHeight="25.0" prefWidth="63.0" text="Inserir" />
-      <Button layoutX="546.0" layoutY="37.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
-      <TextField fx:id="tfPesquisar" layoutX="225.0" layoutY="37.0" prefHeight="25.0" prefWidth="310.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
-      <TableView fx:id="tabelaProduto" layoutX="224.0" layoutY="72.0" prefHeight="200.0" prefWidth="404.0">
+      <Button fx:id="btnSalvar" layoutX="137.0" layoutY="227.0" mnemonicParsing="false" onAction="#inserir" prefHeight="25.0" prefWidth="63.0" text="Inserir" />
+      <Button layoutX="565.0" layoutY="37.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
+      <TextField fx:id="tfPesquisar" layoutX="225.0" layoutY="37.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
+      <TableView fx:id="tabelaProduto" layoutX="224.0" layoutY="72.0" prefHeight="200.0" prefWidth="421.0">
         <columns>
           <TableColumn fx:id="colunaProduto" prefWidth="117.0" text="Produto" />
           <TableColumn fx:id="colunaCor" prefWidth="78.0" text="Cor" />
             <TableColumn fx:id="colunaQualidade" prefWidth="72.0" text="Qualidade" />
-            <TableColumn fx:id="colunaQuantidade" prefWidth="71.0" text="Quantidade" />
-            <TableColumn fx:id="colunaValor" prefWidth="65.0" text="Valor" />
+            <TableColumn fx:id="colunaQuantidade" text="Quantidade" />
+            <TableColumn fx:id="colunaValor" prefWidth="73.0" text="Valor" />
         </columns>
       </TableView>
-      <Button layoutX="565.0" layoutY="279.0" mnemonicParsing="false" onAction="#editar" prefHeight="25.0" prefWidth="63.0" text="Editar" />
-      <Button layoutX="490.0" layoutY="279.0" mnemonicParsing="false" onAction="#excluir" prefHeight="25.0" prefWidth="63.0" text="Excluir" />
+      <Button layoutX="582.0" layoutY="279.0" mnemonicParsing="false" onAction="#editar" prefHeight="25.0" prefWidth="63.0" text="Editar" />
+      <Button layoutX="509.0" layoutY="279.0" mnemonicParsing="false" onAction="#excluir" prefHeight="25.0" prefWidth="63.0" text="Excluir" />
    </children>
 </AnchorPane>
