--- a/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="326.0" prefWidth="478.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
+<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
    <children>
-      <Label layoutX="93.0" layoutY="78.0" text="Produto" />
-      <ComboBox fx:id="cbProduto" layoutX="157.0" layoutY="74.0" prefWidth="150.0" />
-      <Label layoutX="83.0" layoutY="119.0" text="Quantidade" />
-      <TextField fx:id="tfQtd" layoutX="158.0" layoutY="115.0" />
-      <Label layoutX="96.0" layoutY="154.0" text="Cliente" />
-      <Label layoutX="96.0" layoutY="224.0" text="Valor Total:" />
-      <Label fx:id="tfValorTotal" layoutX="173.0" layoutY="224.0" prefHeight="17.0" prefWidth="6.0" text="0" />
-      <Button layoutX="307.0" layoutY="253.0" mnemonicParsing="false" onAction="#finalizar" text="Finalizar" />
-      <ComboBox fx:id="cbCliente" layoutX="158.0" layoutY="151.0" prefWidth="150.0" />
+      <Label layoutX="120.0" layoutY="25.0" text="Produto">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+      <Label layoutX="30.0" layoutY="355.0" text="Quantidade Produto" />
+      <TextField fx:id="tfQtd" layoutX="159.0" layoutY="351.0" />
+      <Label layoutX="487.0" layoutY="25.0" prefHeight="32.0" prefWidth="79.0" text="Cliente">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+      <Label layoutX="332.0" layoutY="355.0" text="Valor Total:" />
+      <Label fx:id="tfValorTotal" layoutX="405.0" layoutY="355.0" prefHeight="17.0" prefWidth="6.0" text="0" />
+      <Button layoutX="488.0" layoutY="337.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
+      <TableView fx:id="tabelaproduto" layoutX="31.0" layoutY="74.0" prefHeight="212.0" prefWidth="303.0">
+        <columns>
+          <TableColumn fx:id="Colunacodigo" prefWidth="52.0" text="Codigo" />
+          <TableColumn fx:id="colunaproduto" prefWidth="84.0" text="Produto" />
+            <TableColumn fx:id="colunaestoque" prefWidth="89.0" text="Estoque" />
+            <TableColumn fx:id="colunavalor" prefWidth="75.0" text="Valor" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabelacliente" layoutX="379.0" layoutY="74.0" prefHeight="212.0" prefWidth="268.0">
+         <columns>
+            <TableColumn fx:id="colunacodigocliente" prefWidth="75.0" text="Codigo" />
+            <TableColumn fx:id="colunanome" prefWidth="106.0" text="Nome" />
+            <TableColumn fx:id="colunacpf" prefWidth="86.0" text="CPF" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
