--- a/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
@@ -6,37 +6,25 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
+<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
    <children>
-      <Label layoutX="120.0" layoutY="25.0" text="Produto">
-         <font>
-            <Font size="22.0" />
-         </font></Label>
       <Label layoutX="30.0" layoutY="355.0" text="Quantidade Produto" />
       <TextField fx:id="tfQtd" layoutX="159.0" layoutY="351.0" />
-      <Label layoutX="487.0" layoutY="25.0" prefHeight="32.0" prefWidth="79.0" text="Cliente">
-         <font>
-            <Font size="22.0" />
-         </font></Label>
-      <Label layoutX="332.0" layoutY="355.0" text="Valor Total:" />
-      <Label fx:id="tfValorTotal" layoutX="405.0" layoutY="355.0" prefHeight="17.0" prefWidth="6.0" text="0" />
-      <Button layoutX="488.0" layoutY="337.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
-      <TableView fx:id="tabelaproduto" layoutX="31.0" layoutY="74.0" prefHeight="212.0" prefWidth="303.0">
-        <columns>
-          <TableColumn fx:id="Colunacodigo" prefWidth="52.0" text="Codigo" />
-          <TableColumn fx:id="colunaproduto" prefWidth="84.0" text="Produto" />
-            <TableColumn fx:id="colunaestoque" prefWidth="89.0" text="Estoque" />
-            <TableColumn fx:id="colunavalor" prefWidth="75.0" text="Valor" />
-        </columns>
-      </TableView>
-      <TableView fx:id="tabelacliente" layoutX="379.0" layoutY="74.0" prefHeight="212.0" prefWidth="268.0">
+      <Label layoutX="234.0" layoutY="398.0" text="Valor Total:" />
+      <Button layoutX="608.0" layoutY="344.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
+      <TextField fx:id="tfPesquisar" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
+      <Button layoutX="371.0" layoutY="42.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
+      <TableView fx:id="tabelaProduto" layoutX="30.0" layoutY="80.0" prefHeight="200.0" prefWidth="421.0">
          <columns>
-            <TableColumn fx:id="colunacodigocliente" prefWidth="75.0" text="Codigo" />
-            <TableColumn fx:id="colunanome" prefWidth="106.0" text="Nome" />
-            <TableColumn fx:id="colunacpf" prefWidth="86.0" text="CPF" />
+            <TableColumn fx:id="colunaProduto" prefWidth="117.0" text="Produto" />
+            <TableColumn fx:id="colunaCor" prefWidth="78.0" text="Cor" />
+            <TableColumn fx:id="colunaMarca" text="Marca" />
+            <TableColumn fx:id="colunaQuantidade" prefWidth="72.0" text="Estoque" />
+            <TableColumn fx:id="colunaValor" prefWidth="73.0" text="Valor" />
          </columns>
       </TableView>
+      <Button layoutX="159.0" layoutY="394.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
+      <Label fx:id="tfValorTotal" layoutX="308.0" layoutY="398.0" text="0" />
    </children>
 </AnchorPane>
