--- a/src/br/senac/LojaMoveis/telas/TelaCliente.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaCliente.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -42,7 +43,7 @@
       <TextField fx:id="tfUf" layoutX="684.0" layoutY="175.0" promptText="UF" />
       <TextField fx:id="tfCelular" layoutX="684.0" layoutY="222.0" promptText="Celular" />
       <TextField fx:id="tfGenero" layoutX="373.0" layoutY="270.0" promptText="Genero" />
-      <TableView layoutX="53.0" layoutY="365.0" prefHeight="200.0" prefWidth="779.0">
+      <TableView fx:id="tabelaCliente" layoutX="53.0" layoutY="365.0" prefHeight="200.0" prefWidth="779.0">
         <columns>
           <TableColumn fx:id="colunaNome" prefWidth="113.0" text="Nome" />
           <TableColumn fx:id="colunaSobrenome" prefWidth="106.0" text="Sobrenome" />
@@ -54,11 +55,11 @@
         </columns>
       </TableView>
       <Button layoutX="721.0" layoutY="270.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="111.0" text="Limpar" />
-      <Button layoutX="579.0" layoutY="270.0" mnemonicParsing="false" onAction="#inserir" prefHeight="25.0" prefWidth="111.0" text="Inserir" />
+      <Button fx:id="btnSalvar" layoutX="579.0" layoutY="270.0" mnemonicParsing="false" onAction="#inserir" prefHeight="25.0" prefWidth="111.0" text="Inserir" />
       <Button layoutX="581.0" layoutY="334.0" mnemonicParsing="false" onAction="#editar" prefHeight="25.0" prefWidth="111.0" text="Editar" />
       <TextField fx:id="tfPesquisa" layoutX="53.0" layoutY="334.0" prefHeight="25.0" prefWidth="331.0" promptText="Click para &quot;Pesquisa&quot;" />
       <Button layoutX="398.0" layoutY="334.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="25.0" prefWidth="111.0" text="Pesquisar" />
       <Button layoutX="721.0" layoutY="334.0" mnemonicParsing="false" onAction="#excluir" prefHeight="25.0" prefWidth="111.0" text="Excluir" />
-      <TextField fx:id="tfNascimento" layoutX="684.0" layoutY="50.0" promptText="Data de Nascimento" />
+      <DatePicker fx:id="data" layoutX="684.0" layoutY="50.0" prefHeight="25.0" prefWidth="149.0" promptText="Data de Nascimento" />
    </children>
 </AnchorPane>
