--- a/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
+<AnchorPane id="AnchorPane" prefHeight="615.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
    <children>
-      <Label layoutX="30.0" layoutY="355.0" text="Quantidade Produto" />
-      <TextField fx:id="tfQtd" layoutX="159.0" layoutY="351.0" />
-      <Label layoutX="234.0" layoutY="398.0" text="Valor Total:" />
-      <Button layoutX="608.0" layoutY="344.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
-      <TextField fx:id="tfPesquisar" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
-      <Button layoutX="371.0" layoutY="42.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
+      <Label layoutX="487.0" layoutY="80.0" text="Quantidade Produto" />
+      <TextField fx:id="tfQtd" layoutX="611.0" layoutY="76.0" />
+      <Label layoutX="566.0" layoutY="120.0" text="Valor Total:" />
+      <Button layoutX="640.0" layoutY="199.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
+      <TextField fx:id="tfPesquisarProd" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
+      <Button layoutX="371.0" layoutY="42.0" mnemonicParsing="false" onAction="#pesquisarProd" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
       <TableView fx:id="tabelaProduto" layoutX="30.0" layoutY="80.0" prefHeight="200.0" prefWidth="421.0">
          <columns>
             <TableColumn fx:id="colunaProduto" prefWidth="117.0" text="Produto" />
@@ -24,7 +24,22 @@
             <TableColumn fx:id="colunaValor" prefWidth="73.0" text="Valor" />
          </columns>
       </TableView>
-      <Button layoutX="159.0" layoutY="394.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
-      <Label fx:id="tfValorTotal" layoutX="308.0" layoutY="398.0" text="0" />
+      <Button layoutX="487.0" layoutY="116.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
+      <Label fx:id="tfValorTotal" layoutX="646.0" layoutY="120.0" text="0" />
+      <TableView fx:id="tabelaCliente" layoutX="30.0" layoutY="372.0" prefHeight="200.0" prefWidth="730.0">
+         <columns>
+            <TableColumn fx:id="colunaNome" prefWidth="113.0" text="Nome" />
+            <TableColumn fx:id="colunaSobrenome" prefWidth="106.0" text="Sobrenome" />
+            <TableColumn fx:id="colunaRg" prefWidth="106.0" text="RG" />
+            <TableColumn fx:id="colunaCpf" prefWidth="97.0" text="CPF" />
+            <TableColumn fx:id="colunaTelefone" prefWidth="98.0" text="Telefone" />
+            <TableColumn fx:id="colunaCelular" minWidth="8.0" prefWidth="88.0" text="Celular" />
+            <TableColumn fx:id="colunaCidade" minWidth="8.0" prefWidth="121.0" text="Cidade" />
+         </columns>
+      </TableView>
+      <TextField fx:id="tfPesquisaCliente" layoutX="30.0" layoutY="341.0" prefHeight="25.0" prefWidth="331.0" promptText="Click para &quot;Pesquisa&quot;" />
+      <Button layoutX="371.0" layoutY="341.0" mnemonicParsing="false" onAction="#pesquisarClie" prefHeight="25.0" prefWidth="99.0" text="Pesquisar" />
+      <Label layoutX="773.0" layoutY="80.0" text="Carrinho:" />
+      <Label layoutX="831.0" layoutY="80.0" />
    </children>
 </AnchorPane>
