--- a/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,7 +13,7 @@
       <Label layoutX="487.0" layoutY="80.0" text="Quantidade Produto" />
       <TextField fx:id="tfQtd" layoutX="611.0" layoutY="76.0" />
       <Label layoutX="566.0" layoutY="120.0" text="Valor Total:" />
-      <Button layoutX="640.0" layoutY="199.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
+      <Button layoutX="653.0" layoutY="238.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
       <TextField fx:id="tfPesquisarProd" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
       <Button layoutX="371.0" layoutY="42.0" mnemonicParsing="false" onAction="#pesquisarProd" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
       <TableView fx:id="tabelaProduto" layoutX="30.0" layoutY="80.0" prefHeight="200.0" prefWidth="421.0">
@@ -40,6 +41,9 @@
       <TextField fx:id="tfPesquisaCliente" layoutX="30.0" layoutY="341.0" prefHeight="25.0" prefWidth="331.0" promptText="Click para &quot;Pesquisa&quot;" />
       <Button layoutX="371.0" layoutY="341.0" mnemonicParsing="false" onAction="#pesquisarClie" prefHeight="25.0" prefWidth="99.0" text="Pesquisar" />
       <Label layoutX="773.0" layoutY="80.0" text="Carrinho:" />
-      <Label layoutX="831.0" layoutY="80.0" />
+      <Label fx:id="tfCarrinho" layoutX="831.0" layoutY="80.0" />
+      <Button fx:id="Carrinho" layoutX="476.0" layoutY="238.0" mnemonicParsing="false" onAction="#Carrinho" prefHeight="39.0" prefWidth="138.0" text="Adicionar no Carrinho" />
+      <DatePicker fx:id="dtData" layoutX="487.0" layoutY="188.0" />
+      <Label layoutX="487.0" layoutY="163.0" text="Data da Compra" />
    </children>
 </AnchorPane>
