--- a/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
+++ b/src/br/senac/LojaMoveis/telas/TelaVenda.fxml
@@ -10,46 +10,40 @@
 
 <AnchorPane id="AnchorPane" prefHeight="615.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senac.LojaMoveis.telas.TelaVendaController">
    <children>
-      <Label layoutX="521.0" layoutY="80.0" text="Quantidade Produto" />
-      <TextField fx:id="tfQtd" layoutX="654.0" layoutY="76.0" prefHeight="25.0" prefWidth="82.0" />
-      <Label layoutX="585.0" layoutY="120.0" text="Valor Total:" />
-      <Button layoutX="831.0" layoutY="322.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
+      <Label layoutX="482.0" layoutY="172.0" text="Quantidade Produto" />
+      <TextField fx:id="tfQtd" layoutX="598.0" layoutY="168.0" prefHeight="25.0" prefWidth="72.0" />
+      <Label layoutX="516.0" layoutY="217.0" text="Valor Total:" />
+      <Button layoutX="686.0" layoutY="253.0" mnemonicParsing="false" onAction="#finalizar" prefHeight="39.0" prefWidth="91.0" text="Finalizar" />
       <TextField fx:id="tfPesquisarProd" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="330.0" promptText="Digite e Click em &quot;Pesquisar&quot;" />
       <Button layoutX="371.0" layoutY="42.0" mnemonicParsing="false" onAction="#pesquisarProd" prefHeight="25.0" prefWidth="82.0" text="Pesquisar" />
-      <TableView fx:id="tabelaProduto" layoutX="30.0" layoutY="80.0" prefHeight="200.0" prefWidth="482.0">
+      <TableView fx:id="tabelaProduto" layoutX="30.0" layoutY="80.0" prefHeight="200.0" prefWidth="447.0">
          <columns>
-            <TableColumn fx:id="colunaIdProd" prefWidth="71.00003051757812" text="ID" />
-            <TableColumn fx:id="colunaProduto" prefWidth="103.0" text="Produto" />
-            <TableColumn fx:id="colunaCor" prefWidth="109.0" text="Cor" />
-            <TableColumn fx:id="colunaMarca" prefWidth="81.0" text="Marca" />
-            <TableColumn fx:id="colunaQuantidade" prefWidth="116.0" text="Estoque" />
-            <TableColumn fx:id="colunaValor" prefWidth="100.0" text="Valor" />
+            <TableColumn fx:id="colunaIdProd" prefWidth="48.000030517578125" text="ID" />
+            <TableColumn fx:id="colunaProduto" prefWidth="98.0" text="Produto" />
+            <TableColumn fx:id="colunaCor" prefWidth="85.0" text="Cor" />
+            <TableColumn fx:id="colunaMarca" prefWidth="99.0" text="Marca" />
+            <TableColumn fx:id="colunaQuantidade" prefWidth="54.0" text="Estoque" />
+            <TableColumn fx:id="colunaValor" prefWidth="61.0" text="Valor" />
          </columns>
       </TableView>
-      <Button layoutX="516.0" layoutY="116.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
-      <TableView fx:id="tabelaCliente" layoutX="30.0" layoutY="372.0" prefHeight="200.0" prefWidth="841.0">
+      <Button layoutX="686.0" layoutY="168.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
+      <TableView fx:id="tabelaCliente" layoutX="30.0" layoutY="381.0" prefHeight="200.0" prefWidth="330.0">
          <columns>
-            <TableColumn fx:id="colunaIdClien" prefWidth="113.0" text="ID" />
-            <TableColumn fx:id="colunaNome" prefWidth="113.0" text="Nome" />
-            <TableColumn fx:id="colunaSobrenome" prefWidth="106.0" text="Sobrenome" />
-            <TableColumn fx:id="colunaRg" prefWidth="106.0" text="RG" />
-            <TableColumn fx:id="colunaCpf" prefWidth="97.0" text="CPF" />
-            <TableColumn fx:id="colunaTelefone" prefWidth="98.0" text="Telefone" />
-            <TableColumn fx:id="colunaCelular" minWidth="8.0" prefWidth="88.0" text="Celular" />
-            <TableColumn fx:id="colunaCidade" minWidth="8.0" prefWidth="121.0" text="Cidade" />
+            <TableColumn fx:id="colunaIdClien" prefWidth="52.000030517578125" text="ID" />
+            <TableColumn fx:id="colunaNome" prefWidth="137.0" text="Nome" />
+            <TableColumn fx:id="colunaSobrenome" prefWidth="143.0" text="Sobrenome" />
          </columns>
       </TableView>
       <TextField fx:id="tfPesquisaCliente" layoutX="30.0" layoutY="341.0" prefHeight="25.0" prefWidth="331.0" promptText="Click para &quot;Pesquisa&quot;" />
       <Button layoutX="371.0" layoutY="341.0" mnemonicParsing="false" onAction="#pesquisarClie" prefHeight="25.0" prefWidth="99.0" text="Pesquisar" />
-      <Label layoutX="839.0" layoutY="80.0" text="Carrinho:" />
       <Label fx:id="tfCarrinho" layoutX="898.0" layoutY="80.0" prefHeight="17.0" prefWidth="10.0" />
-      <Button fx:id="Carrinho" layoutX="660.0" layoutY="322.0" mnemonicParsing="false" onAction="#Carrinho" prefHeight="39.0" prefWidth="138.0" text="Adicionar no Carrinho" />
-      <DatePicker fx:id="dtData" layoutX="624.0" layoutY="159.0" />
-      <Label layoutX="516.0" layoutY="163.0" prefHeight="17.0" prefWidth="91.0" text="Data da Compra" />
-      <Label layoutX="516.0" layoutY="209.0" prefHeight="17.0" prefWidth="91.0" text="Codigo Produto" />
-      <Label layoutX="516.0" layoutY="254.0" prefHeight="17.0" prefWidth="91.0" text="Codigo Cliente" />
-      <TextField fx:id="tfIdProd" layoutX="624.0" layoutY="205.0" prefHeight="25.0" prefWidth="72.0" />
-      <TextField fx:id="tfIdCliente" layoutX="624.0" layoutY="250.0" prefHeight="25.0" prefWidth="72.0" />
-      <TextField fx:id="tfValorTotal" layoutX="654.0" layoutY="116.0" prefHeight="25.0" prefWidth="82.0" />
+      <Button fx:id="Carrinho" layoutX="522.0" layoutY="253.0" mnemonicParsing="false" onAction="#Carrinho" prefHeight="39.0" prefWidth="138.0" text="Adicionar no Carrinho" />
+      <DatePicker fx:id="dtData" layoutX="811.0" layoutY="76.0" />
+      <Label layoutX="715.0" layoutY="80.0" prefHeight="17.0" prefWidth="91.0" text="Data da Compra" />
+      <Label layoutX="501.0" layoutY="132.0" prefHeight="17.0" prefWidth="91.0" text="Codigo Produto" />
+      <Label layoutX="501.0" layoutY="89.0" prefHeight="17.0" prefWidth="91.0" text="Codigo Cliente" />
+      <TextField fx:id="tfIdProd" layoutX="598.0" layoutY="128.0" prefHeight="25.0" prefWidth="72.0" />
+      <TextField fx:id="tfIdCliente" layoutX="598.0" layoutY="85.0" prefHeight="25.0" prefWidth="72.0" />
+      <TextField fx:id="tfValorTotal" layoutX="598.0" layoutY="213.0" prefHeight="25.0" prefWidth="72.0" />
    </children>
 </AnchorPane>
